--- a/css/styles.css
+++ b/css/styles.css
@@ -508,6 +508,14 @@ p {
 .our-work .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
+.our-work .item:hover,
+.our-work .item:focus {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .projekts {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
