--- a/css/styles.css
+++ b/css/styles.css
@@ -181,15 +181,21 @@ p {
 .specificsh-list .item:not(:first-child) {
   margin-left: 30px;
 }
-.specificsh-icon {
-  content: '';
-  display: block;
-  width: 270px;
+.specificsh-icon-box {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;
   height: 120px;
   padding: 25px 100px;
   border-radius: 4px;
   background: #f5f4fa;
   margin-bottom: 30px;
+}
+.specificsh-icon {
+  content: '';
+  width: 70px;
+  height: 70px;
 }
 
 .specificsh {
@@ -249,6 +255,7 @@ p {
 }
 .working-list .item {
   flex-wrap: nowrap;
+  background-color: var(--secondary-acsent-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -347,7 +354,6 @@ p {
 }
 .regular-clients-icon-link:hover,
 .regular-clients-icon-link:focus {
-  border-radius: 4px;
   border: 1px solid rgba(33, 150, 243, 1);
 }
 .regular-clients-icon-link:hover .regular-clients-logo-icon,
@@ -370,7 +376,7 @@ p {
 }
 .footer-contacts-main {
   display: flex;
-  align-items: center;
+  align-items: ba;
 }
 .down-social-icon {
   margin-left: 70px;
@@ -501,6 +507,8 @@ p {
 .our-work .item {
   margin-right: 30px;
   margin-bottom: 30px;
+  border: 1 px solid rgba(238, 238, 238, 1);
+  background-color: var(--secondary-acsent-color);
 }
 .our-work .item:nth-child(3n) {
   margin-right: 0;
@@ -508,9 +516,10 @@ p {
 .our-work .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.our-work .item:hover,
-.our-work .item:focus {
-  background: #ffffff;
+.projekts-link:hover,
+.projekts-link:focus {
+  display: block;
+  background-color: var(--secondary-acsent-color);
   border-bottom: 1px solid #eeeeee;
   box-sizing: border-box;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -518,6 +527,7 @@ p {
 }
 .projekts {
   padding: 20px 24px;
+  background-color: var(--secondary-acsent-color);
   border: 1px solid #eeeeee;
   border-top: none;
 }
