--- a/css/styles.css
+++ b/css/styles.css
@@ -184,10 +184,10 @@ p {
 .specificsh-icon-box {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 0 auto;
   width: 100%;
   height: 120px;
-  padding: 25px 100px;
   border-radius: 4px;
   background: #f5f4fa;
   margin-bottom: 30px;
@@ -376,7 +376,7 @@ p {
 }
 .footer-contacts-main {
   display: flex;
-  align-items: ba;
+  align-items: baseline;
 }
 .down-social-icon {
   margin-left: 70px;
